# broker_test_task

./: readme.md
project/: docker-compose.yml  dockerfile  pyproject.toml
project/app/: exceptions.py
project/app/migrations/: 0001_initial.py  0002_transaction_created_at_wallet_created_at_and_more.py  0003_alter_transaction_txid_alter_wallet_balance_and_more.py
project/app/models/: __init__.py  transaction.py  wallet.py
project/app/rest_framework/: serializers.py  urls.py  views.py
project/app/tests/: factories.py  test_transactions.py  test_wallets.py
project/project/: settings.py  urls.py
